Jonathan update on 26 Feb

--- a/themes/navy/source/css/_partial/header.styl
+++ b/themes/navy/source/css/_partial/header.styl
@@ -44,7 +44,7 @@ logo-size = 50px
   padding: 0 15px
   &:hover
     opacity: 1
-    color: color-link-hover
+    color: #fff
 
 #search-input-wrap
   display: none
